--- a/styles/main.css
+++ b/styles/main.css
@@ -40,9 +40,83 @@ body {
     width: 100%;
     height: 3px;
     border-radius: 1.5px;
-    background: transparent;
+    background-color: transparent;
     display: block;
 }
 .header-nav a.active::after {
-    background: #FFC725;
+    background-color: #FFC725;
+}
+.button {
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    gap: 10px;
+}
+.button-count {
+    font-weight: 700;
+    font-size: 13px;
+    color: #FFFFFF;
+    background-color: #F37335;
+    border-radius: 100%;
+    position: absolute;
+    width: 17px;
+    height: 17px;
+    text-align: center;
+    line-height: 1.3;
+    bottom: 3px;
+    right: -4px;
+}
+.button-item {
+    position: relative;
+}
+.button-text {
+    color: #443737;
+    font-weight: 700;
+    font-size: 15px;
+}
+.bg {
+    text-align: center;
+    color: #FFFFFF;
+    background-image: url(../images/bj.png);
+    background-size: cover;
+    padding: 142px 0;
+    background-position: center center;
+}
+.breadcrumbs {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+.breadcrumbs a {
+    color: #DEDEDE;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+}
+.breadcrumbs a::before {
+    content: '/';
+    position: relative;
+    left: -7px;
+}
+.breadcrumbs li:first-child a::before {
+    display: none;
+}
+.title {
+    font-weight: 700;
+    font-size: 79px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.description {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    line-height: 1.5x;
+    color: #FAF9F9;
+    max-width: 320px;
+    margin: 0 auto;
 }
